# ofx-projects

./: CMakeBase.txt  README  index.html  openFrameworks.cmake
addonExamples/ofxFft_example/: CMakeLists.txt
addonExamples/ofxFft_example/src/: testApp.h
addonExamples/ofxFiducialFinder/: CMakeLists.txt
addonExamples/ofxFiducialFinder/src/: testApp.h
addonExamples/ofxSimpleGuiToo_example/: CMakeLists.txt
addonExamples/ofxSimpleGuiToo_example/src/: testApp.cpp  testApp.h
addons/ofxBox2d-vanderline/: .ofxBox2dPolygon.h.swo  ofxBox2d.cpp  ofxBox2dBaseShape.h  ofxBox2dPolygon.h
addons/ofxFft/docs/: Instructions.txt
addons/ofxFft/examples/fftTest/: fftTest.cbp
addons/ofxFft/examples/fftTest/src/: main.cpp
addons/ofxFft/src/: ofxFft.cpp  ofxFft.h  ofxFftBasic.cpp  ofxFftBasic.h  ofxFftw.cpp  ofxFftw.h
addons/ofxFiducialFinder/src/libfidtrack/: fidtrackX.cpp  fidtrackX.h  segment.cpp  segment.h
addons/ofxOpenCv/src/: ofxCvContourFinder.cpp  ofxCvContourFinder.h  ofxCvGrayscaleImage.cpp  ofxCvGrayscaleImage.h
addons/ofxSimpleGuiToo/: install.xml
addons/ofxSimpleGuiToo/src/: ofxSimpleGuiConfig.cpp  ofxSimpleGuiControl.cpp  ofxSimpleGuiToo.cpp  ofxSimpleGuiToo.h
addons/ofxSimpleGuiToo/src/Controls/: ofxSimpleGuiColorPicker.cpp  ofxSimpleGuiSliderBase.h  ofxSimpleGuiToggle.cpp
apps/chips/: CMakeLists.txt
apps/chips/src/: ParticleSystem.h  ShapeSpectrum.cpp  ShapeSpectrum.h  bBlob.h  bContourFinder.h  bTracker.cpp  testApp.h
apps/creDetect/: CMakeLists.txt
apps/creDetect/src/: faceDeplay.h  testApp.cpp  testApp.h
apps/fft_demo/: CMakeLists.txt
apps/fft_demo/data/: _settings.xml
apps/fft_demo/src/: .ParticleSystem.cpp.swo  Particle.cpp  Particle.h  ParticleSystem.cpp  ParticleSystem.h  testApp.cpp  testApp.h
apps/font_shape_test/: CMakeLists.txt
apps/font_shape_test/src/: char_shape.h  testApp.cpp  testApp.h
apps/opticalFlow_demo/: CMakeLists.txt
apps/opticalFlow_demo/src/: Particle.cpp  ParticleSystem.cpp  ParticleSystem.h  main.cpp  optFlow.cpp  optFlow.h  testApp.cpp  testApp.h
apps/particle_font_test/: CMakeLists.txt
apps/particle_font_test/src/: Particle.cpp  Particle.h  ParticleSystem.cpp  ParticleSystem.h  char_shape.h  main.cpp  testApp.cpp  testApp.h
apps/projectTemplate/: CMakeLists.txt
apps/projectTemplate/src/: testApp.h
apps/shaderTest/: CMakeLists.txt
apps/shaderTest/data/: diffuse.frag
apps/shaderTest/src/: ParticleSystem.cpp  ParticleSystem.h  main.cpp  ofxFBOTexture.cpp  testApp.cpp
apps/skin_detector/: CMakeLists.txt  skin
apps/skin_detector/src/: SkinClassifier.cpp  SkinClassifier.h  main.cpp  skinClassifier.cpp  testApp.cpp  testApp.h
apps/specTrum/src/: testApp.cpp
apps/tetris_detector/: CMakeLists.txt
apps/tetris_detector/src/: testApp.cpp  testApp.h  tetrisClassifier.h
chips/: .CMakeLists.txt.swo  CMakeLists.txt
chips/src/: Particle.cpp  Particle.h  ParticleSystem.cpp  ParticleSystem.h  ShapeSpectrum.cpp  ShapeSpectrum.h  bBlob.cpp  bBlob.h  bContourFinder.cpp  bContourFinder.h  bTracker.cpp  bTracker.h  bWorld.cpp  bWorld.h  testApp.cpp  testApp.h
dopAddons/ofxCvBlobFinder/: CMakeLists.txt
dopAddons/ofxCvBlobFinder/example/: testApp.cpp
dopAddons/ofxCvBlobFinder/src/: ofxCvBlobFinder.cpp  ofxCvBlobFinder.h  ofxCvComplexBlob.cpp  ofxCvComplexBlob.h
dopAddons/optFlow/src/: optFlow.cpp  optFlow.h  optFlowBM.cpp  optFlowBM.h  optFlowHS.cpp  optFlowHS.h  optFlowLK.cpp  optFlowLK.h
dopAddons/screenGrabber/src/: ofxThreadedImageSaver.cpp  ofxThreadedImageSaver.h  screenGrabber.cpp  screenGrabber.h
examples/fftwTest/: CMakeLists.txt
examples/fftwTest/src/: .testApp.cpp.swp  testApp.cpp
openFrameworks/: CMakeLists.txt
opticalFlow_demo/: CMakeLists.txt
opticalFlow_demo/src/: optFlow.cpp  optFlow.h  testApp.cpp  testApp.h
projectTemplate/src/: testApp.cpp
shaderTest/: CMakeLists.txt
shaderTest/data/: diffuse.frag  diffuse.vert
shaderTest/src/: Particle.cpp  Particle.h  ParticleSystem.cpp  ParticleSystem.h  main.cpp  testApp.cpp  testApp.h
specTrum/: CMakeLists.txt
specTrum/src/: main.cpp  testApp.cpp  testApp.h
